@@ -1,0 +1,7 @@
+config FREETZ_PACKAGE_BFUSB
+	bool "bfusb: AVM BlueFRITZ! USB stick support"
+	select FREETZ_MODULE_bfusb
+	default n
+	help
+		This package adds support for the AVM
+		AVM BlueFRITZ! USB stick.
